# terminal_token

./: Cargo.toml  README.md  consulta.txt  envCOPY
src/: main.rs  timer2.rs
src/coinStdinOut/: coinStdinOut.rs  mod.rs
src/dbManager/: dbManagerCreation.rs  dbManagerCud.rs  mod.rs
src/llamadasApi/: coingecko.rs  llamadasApi.rs  mod.rs  tradingview.rs
src/myconfig/: mod.rs
src/promptInit/: mod.rs
src/ui/: graficas.rs  interface.rs  mod.rs
